--- a/angular.json
+++ b/angular.json
@@ -19,13 +19,16 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
-              "src/favicon.ico",
+              "src/car.ico",
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -76,7 +79,7 @@
             ],
             "scripts": [],
             "assets": [
-              "src/favicon.ico",
+              "src/car.ico",
               "src/assets"
             ]
           }
